@@ -5,6 +5,8 @@
 package org.mozilla.gecko.sync;
 
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.io.Reader;
 import java.io.StringReader;
 import java.util.Map;
@@ -15,8 +17,6 @@ import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 import org.json.simple.parser.JSONParser;
 import org.json.simple.parser.ParseException;
-import org.mozilla.apache.commons.codec.binary.Base64;
-import org.mozilla.gecko.sync.UnexpectedJSONException.BadRequiredFieldJSONException;
 
 /**
  * Extend JSONObject to do little things, like, y'know, accessing members.
@@ -28,141 +28,42 @@ public class ExtendedJSONObject {
 
   public JSONObject object;
 
-  /**
-   * Return a <code>JSONParser</code> instance for immediate use.
-   * <p>
-   * <code>JSONParser</code> is not thread-safe, so we return a new instance
-   * each call. This is extremely inefficient in execution time and especially
-   * memory use -- each instance allocates a 16kb temporary buffer -- and we
-   * hope to improve matters eventually.
-   */
-  protected static JSONParser getJSONParser() {
-    return new JSONParser();
+  private static Object processParseOutput(Object parseOutput) {
+    if (parseOutput instanceof JSONObject) {
+      return new ExtendedJSONObject((JSONObject) parseOutput);
+    } else {
+      return parseOutput;
+    }
+  }
+
+  public static Object parse(String string) throws IOException, ParseException {
+    return processParseOutput(new JSONParser().parse(string));
+  }
+
+  public static Object parse(InputStreamReader reader) throws IOException, ParseException {
+    return processParseOutput(new JSONParser().parse(reader));
+
+  }
+
+  public static Object parse(InputStream stream) throws IOException, ParseException {
+    InputStreamReader reader = new InputStreamReader(stream, "UTF-8");
+    return ExtendedJSONObject.parse(reader);
   }
 
   /**
-   * Parse a JSON encoded string.
+   * Helper method to get a JSONObject from a String. Input: String containing
+   * JSON. Output: Extracted JSONObject. Throws: Exception if JSON is invalid.
    *
-   * @param in <code>Reader</code> over a JSON-encoded input to parse; not
-   *            necessarily a JSON object.
-   * @return a regular Java <code>Object</code>.
    * @throws ParseException
    * @throws IOException
-   */
-  protected static Object parseRaw(Reader in) throws ParseException, IOException {
-    try {
-      return getJSONParser().parse(in);
-    } catch (Error e) {
-      // Don't be stupid, org.json.simple. Bug 1042929.
-      throw new ParseException(ParseException.ERROR_UNEXPECTED_EXCEPTION);
-    }
-  }
-
-  /**
-   * Parse a JSON encoded string.
-   * <p>
-   * You should prefer the streaming interface {@link #parseRaw(Reader)}.
-   *
-   * @param input JSON-encoded input string to parse; not necessarily a JSON object.
-   * @return a regular Java <code>Object</code>.
-   * @throws ParseException
-   */
-  protected static Object parseRaw(String input) throws ParseException {
-    try {
-      return getJSONParser().parse(input);
-    } catch (Error e) {
-      // Don't be stupid, org.json.simple. Bug 1042929.
-      throw new ParseException(ParseException.ERROR_UNEXPECTED_EXCEPTION);
-    }
-  }
-
-  /**
-   * Helper method to get a JSON array from a stream.
-   *
-   * @param in <code>Reader</code> over a JSON-encoded array to parse.
-   * @throws ParseException
-   * @throws IOException
-   * @throws NonArrayJSONException if the object is valid JSON, but not an array.
-   */
-  public static JSONArray parseJSONArray(Reader in)
-      throws IOException, ParseException, NonArrayJSONException {
-    Object o = parseRaw(in);
-
-    if (o == null) {
-      return null;
-    }
-
-    if (o instanceof JSONArray) {
-      return (JSONArray) o;
-    }
-
-    throw new NonArrayJSONException("value must be a JSON array");
-  }
-
-  /**
-   * Helper method to get a JSON array from a string.
-   * <p>
-   * You should prefer the stream interface {@link #parseJSONArray(Reader)}.
-   *
-   * @param jsonString input.
-   * @throws ParseException
-   * @throws IOException
-   * @throws NonArrayJSONException if the object is valid JSON, but not an array.
-   */
-  public static JSONArray parseJSONArray(String jsonString)
-      throws IOException, ParseException, NonArrayJSONException {
-    Object o = parseRaw(jsonString);
-
-    if (o == null) {
-      return null;
-    }
-
-    if (o instanceof JSONArray) {
-      return (JSONArray) o;
-    }
-
-    throw new NonArrayJSONException("value must be a JSON array");
-  }
-
-  /**
-   * Helper method to get a JSON object from a stream.
-   *
-   * @param in input {@link Reader}.
-   * @throws ParseException
-   * @throws IOException
-   * @throws NonArrayJSONException if the object is valid JSON, but not an object.
-   */
-  public static ExtendedJSONObject parseJSONObject(Reader in)
-      throws IOException, ParseException, NonObjectJSONException {
-    return new ExtendedJSONObject(in);
-  }
-
-  /**
-   * Helper method to get a JSON object from a string.
-   * <p>
-   * You should prefer the stream interface {@link #parseJSONObject(Reader)}.
-   *
-   * @param jsonString input.
-   * @throws ParseException
-   * @throws IOException
-   * @throws NonObjectJSONException if the object is valid JSON, but not an object.
+   * @throws NonObjectJSONException
+   *           If the object is valid JSON, but not an object.
    */
   public static ExtendedJSONObject parseJSONObject(String jsonString)
-      throws IOException, ParseException, NonObjectJSONException {
+                                                                     throws IOException,
+                                                                     ParseException,
+                                                                     NonObjectJSONException {
     return new ExtendedJSONObject(jsonString);
-  }
-
-  /**
-   * Helper method to get a JSON object from a UTF-8 byte array.
-   *
-   * @param in UTF-8 bytes.
-   * @throws ParseException
-   * @throws NonObjectJSONException if the object is valid JSON, but not an object.
-   * @throws IOException
-   */
-  public static ExtendedJSONObject parseUTF8AsJSONObject(byte[] in)
-      throws ParseException, NonObjectJSONException, IOException {
-    return parseJSONObject(new String(in, "UTF-8"));
   }
 
   public ExtendedJSONObject() {
@@ -173,39 +74,29 @@ public class ExtendedJSONObject {
     this.object = o;
   }
 
-  public ExtendedJSONObject(Reader in) throws IOException, ParseException, NonObjectJSONException {
-    if (in == null) {
+  public ExtendedJSONObject(String jsonString) throws IOException, ParseException, NonObjectJSONException {
+    if (jsonString == null) {
       this.object = new JSONObject();
       return;
     }
-
-    Object obj = parseRaw(in);
+    Reader in = new StringReader(jsonString);
+    Object obj = new JSONParser().parse(in);
     if (obj instanceof JSONObject) {
       this.object = ((JSONObject) obj);
     } else {
-      throw new NonObjectJSONException("value must be a JSON object");
+      throw new NonObjectJSONException(obj);
     }
-  }
-
-  public ExtendedJSONObject(String jsonString) throws IOException, ParseException, NonObjectJSONException {
-    this(jsonString == null ? null : new StringReader(jsonString));
   }
 
   // Passthrough methods.
   public Object get(String key) {
     return this.object.get(key);
   }
-
   public Long getLong(String key) {
     return (Long) this.get(key);
   }
-
   public String getString(String key) {
     return (String) this.get(key);
-  }
-
-  public Boolean getBoolean(String key) {
-    return (Boolean) this.get(key);
   }
 
   /**
@@ -224,7 +115,7 @@ public class ExtendedJSONObject {
       return (Integer) val;
     }
     if (val instanceof Long) {
-      return ((Long) val).intValue();
+      return new Integer(((Long) val).intValue());
     }
     if (val instanceof String) {
       return Integer.parseInt((String) val, 10);
@@ -234,7 +125,6 @@ public class ExtendedJSONObject {
 
   /**
    * Return a server timestamp value as milliseconds since epoch.
-   *
    * @param key
    * @return A Long, or null if the value is non-numeric or doesn't exist.
    */
@@ -243,12 +133,12 @@ public class ExtendedJSONObject {
 
     // This is absurd.
     if (val instanceof Double) {
-      double millis = ((Double) val) * 1000;
-      return Double.valueOf(millis).longValue();
+      double millis = ((Double) val).doubleValue() * 1000;
+      return new Double(millis).longValue();
     }
     if (val instanceof Float) {
       double millis = ((Float) val).doubleValue() * 1000;
-      return Double.valueOf(millis).longValue();
+      return new Double(millis).longValue();
     }
     if (val instanceof Number) {
       // Must be an integral number.
@@ -276,23 +166,6 @@ public class ExtendedJSONObject {
     map.put(key, value);
   }
 
-  @SuppressWarnings({ "unchecked", "rawtypes" })
-  public void putAll(Map map) {
-    this.object.putAll(map);
-  }
-
-  /**
-   * Remove key-value pair from JSONObject.
-   *
-   * @param key
-   *          to be removed.
-   * @return true if key exists and was removed, false otherwise.
-   */
-  public boolean remove(String key) {
-    Object res = this.object.remove(key);
-    return (res != null);
-  }
-
   public ExtendedJSONObject getObject(String key) throws NonObjectJSONException {
     Object o = this.object.get(key);
     if (o == null) {
@@ -304,11 +177,33 @@ public class ExtendedJSONObject {
     if (o instanceof JSONObject) {
       return new ExtendedJSONObject((JSONObject) o);
     }
-    throw new NonObjectJSONException("key must be a JSON object: " + key);
+    throw new NonObjectJSONException(o);
+  }
+
+  public ExtendedJSONObject clone() {
+    return new ExtendedJSONObject((JSONObject) this.object.clone());
+  }
+
+  /**
+   * Helper method for extracting a JSONObject from its string encoding within
+   * another JSONObject.
+   *
+   * Input: JSONObject and key. Output: JSONObject extracted. Throws: Exception
+   * if JSON is invalid.
+   *
+   * @throws NonObjectJSONException
+   * @throws ParseException
+   * @throws IOException
+   */
+  public ExtendedJSONObject getJSONObject(String key) throws IOException,
+                                                     ParseException,
+                                                     NonObjectJSONException {
+    String val = (String) this.object.get(key);
+    return ExtendedJSONObject.parseJSONObject(val);
   }
 
   @SuppressWarnings("unchecked")
-  public Set<Entry<String, Object>> entrySet() {
+  public Iterable<Entry<String, Object>> entryIterable() {
     return this.object.entrySet();
   }
 
@@ -325,75 +220,10 @@ public class ExtendedJSONObject {
     if (o instanceof JSONArray) {
       return (JSONArray) o;
     }
-    throw new NonArrayJSONException("key must be a JSON array: " + key);
+    throw new NonArrayJSONException(o);
   }
 
   public int size() {
     return this.object.size();
-  }
-
-  @Override
-  public int hashCode() {
-    if (this.object == null) {
-      return getClass().hashCode();
-    }
-    return this.object.hashCode() ^ getClass().hashCode();
-  }
-
-  @Override
-  public boolean equals(Object o) {
-    if (!(o instanceof ExtendedJSONObject)) {
-      return false;
-    }
-    if (o == this) {
-      return true;
-    }
-    ExtendedJSONObject other = (ExtendedJSONObject) o;
-    if (this.object == null) {
-      return other.object == null;
-    }
-    return this.object.equals(other.object);
-  }
-
-  /**
-   * Throw if keys are missing or values have wrong types.
-   *
-   * @param requiredFields list of required keys.
-   * @param requiredFieldClass class that values must be coercable to; may be null, which means don't check.
-   * @throws UnexpectedJSONException
-   */
-  public void throwIfFieldsMissingOrMisTyped(String[] requiredFields, Class<?> requiredFieldClass) throws BadRequiredFieldJSONException {
-    // Defensive as possible: verify object has expected key(s) with string value.
-    for (String k : requiredFields) {
-      Object value = get(k);
-      if (value == null) {
-        throw new BadRequiredFieldJSONException("Expected key not present in result: " + k);
-      }
-      if (requiredFieldClass != null && !(requiredFieldClass.isInstance(value))) {
-        throw new BadRequiredFieldJSONException("Value for key not an instance of " + requiredFieldClass + ": " + k);
-      }
-    }
-  }
-
-  /**
-   * Return a base64-encoded string value as a byte array.
-   */
-  public byte[] getByteArrayBase64(String key) {
-    String s = (String) this.object.get(key);
-    if (s == null) {
-      return null;
-    }
-    return Base64.decodeBase64(s);
-  }
-
-  /**
-   * Return a hex-encoded string value as a byte array.
-   */
-  public byte[] getByteArrayHex(String key) {
-    String s = (String) this.object.get(key);
-    if (s == null) {
-      return null;
-    }
-    return Utils.hex2Byte(s);
   }
 }
